<resources>
    <string name="app_name">Secure Share</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_menu_title">Home</string>
    <string name="file_menu_title">Files</string>
    <string name="upload_icon_title">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rooms">Rooms</string>
    <string name="login_your_account">Login Account</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="file_selection">File Selection</string>
    <string name="choose_file">Choose File</string>
    <string name="file_upload_clipart">File Upload Clipart</string>
    <string name="theme_icon">Theme Icon</string>
    <string name="security_details">Security Details</string>
    <string name="encryption">Encryption</string>
    <string name="selected_file_placeholder">File : Selected File</string>
    <string name="algorithm">Algorithm:</string>

    <string-array name="algorithms">
        <item>AES-128</item>
        <item>AES-192</item>
        <item>AES-256</item>
    </string-array>

    <string name="prompt_algorithm">Select a algorithm</string>
    <string name="pass">Pass:</string>
    <string name="enter_a_pass_key_for_encryption">Enter pass or key</string>
    <string name="expiry">Expiry</string>
    <string name="generate">Generate</string>
    <string name="please_wait">Please Wait</string>
    <string name="file_is_encrypting">File is Encrypting</string>
    <string name="file_demo_txt">File : Demo.txt</string>
    <string name="search_key_789456123">Search Key : 789456123</string>
    <string name="algorithm_aes_256">Algorithm : AES-256</string>
    <string name="expiry_02_05_2023">Expiry : 02-05-2023</string>
    <string name="pass_bubuwhi548454s">Pass : BUBUWHI548454S==</string>
    <string name="no_files_found">No Files Found</string>
    <string name="view">View</string>
    <string name="view_file">View File</string>
    <string name="search_key">Search Key :</string>
    <string name="enter_a_search_key">Enter a Search Key</string>
    <string name="search_results">Search Results...</string>
    <string name="image_jpeg_found">image.jpeg found</string>
    <string name="unlock_the_file">Unlock the file</string>
    <string name="decryption">Decryption</string>
    <string name="paste">Paste</string>
    <string name="oops">Oops...</string>
    <string name="no_internet_connection_message">There is no internet connection</string>
    <string name="check_connectivity_message">please check your internet connection</string>

    <string-array name="nonMediaFiles">
        <item>.txt</item>
        <item>.pdf</item>
        <item>.docx</item>
        <item>.xlsx</item>
        <item>.xls</item>
        <item>.pptx</item>
        <item>.ppt</item>
        <item>.zip</item>
        <item>.rar</item>
    </string-array>

    <string-array name="mediaFiles">
        <item>.jpg</item>
        <item>.png</item>
        <item>.mp3</item>
        <item>.mp4</item>
        <item>.jpeg</item>
    </string-array>

    <string name="CONNECTIVITY_ACTION">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="splash_screen_center_image">App Icon On Splash Screen</string>
</resources>