<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".UploadFragment">


    <!--
        Header Of The Upload Fragment
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackColor"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/upload_icon_title"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/theme"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="0.1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/theme_icon"
            android:focusable="true"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:text="@string/file_selection"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textAlignment="center" />

    <!--
        File Selection Box
    -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="40dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingVertical="30dp"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/file_upload_clipart"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/upload_file" />

            <TextView
                android:id="@+id/filename"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="35dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/lightTextColor" />

            <androidx.cardview.widget.CardView
                android:id="@+id/selectButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/buttonColor1"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                android:layout_marginBottom="20dp"
                tools:ignore="TouchTargetSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/choose_file"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Next -->
    <include
        android:id="@+id/next"
        layout="@layout/next_button" />

</LinearLayout>