<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:orientation="vertical">

        <!-- file Name -->

        <TextView
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_demo_txt"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/fileName" />

        <!-- Search Key -->
        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_key_789456123"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:id="@+id/searchKey" />

        <!-- Algorithm -->
        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_aes_256"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:id="@+id/algorithm" />

        <!-- Expiry -->
        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiry_02_05_2023"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:id="@+id/expiry" />

        <!-- Pass -->
        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_bubuwhi548454s"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:id="@+id/pass" />

        <!-- delete and Copy -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#AF1616"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="SpeakableTextPresentCheck">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:paddingVertical="5dp"
                    android:src="@drawable/delete" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/buttonColor2"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:paddingVertical="5dp"
                    android:src="@drawable/copy" />

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>