<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecryptionDetails">

    <!-- header !-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackColor"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/unlock_the_file"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/decryption"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/selectedFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingVertical="10dp"
            android:text="@string/selected_file_placeholder"
            android:textColor="@color/lightTextColor"
            android:textSize="14sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/algorithm_input" />

            <include layout="@layout/pass_input" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:id="@+id/viewFileButton"
                layout="@layout/next_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>