<?xml version="1.0" encoding="utf-8"?>
<!--
    Security Details Form, Selection Of Algorithm and
    Pass key for Encryption
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".EncryptionDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackColor"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_details"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/encryption"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/selectedFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingVertical="10dp"
            android:text="@string/selected_file_placeholder"
            android:textColor="@color/lightTextColor"
            android:textSize="14sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/algorithm_input" />

            <include layout="@layout/pass_input" />

            <!--
                Set Expiry Of The File, No need to create
                component as only requires at the time of
                upload
            -->

            <LinearLayout
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry"
                    android:textSize="14sp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeColor="@color/textColor"
                    app:strokeWidth="1dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:background="@color/backgroundColor"
                        android:lines="2"
                        android:id="@+id/expiry"
                        android:textSize="14sp"
                        android:textColor="@color/textColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp" />


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:id="@+id/nextButton"
                layout="@layout/next_button" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>