<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".ViewFile">

    <!-- header !-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackColor"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/view_file"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <!-- search bar -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/search_key"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_weight="1.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:strokeColor="@color/textColor"
                    app:strokeWidth="1dp">

                    <EditText
                        android:id="@+id/searchKey"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/backgroundColor"
                        android:hint="@string/enter_a_search_key"
                        android:paddingVertical="7dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/textColor"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="14sp" />


                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1" />

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="8dp"
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/buttonColor2"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:paddingVertical="5dp"
                        android:src="@drawable/search" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- search results !-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_results"
                android:textSize="14sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/image_jpeg_found"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/viewFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/buttonColor1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:paddingVertical="8dp"
                    android:text="@string/view_file"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>